--- a/_config.yml
+++ b/_config.yml
@@ -13,16 +13,16 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Your awesome title
-email: your-email@domain.com
+title: Octopus Carnival
+email: u.alberton@gmail.com
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://example.com" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
+  A repository of my English language RPG-related writings.
+  Mostly GURPS with a smattering of other systems.
+baseurl: "/octopus-carnival" # the subpath of your site, e.g. /blog
+url: "https://Bira.github.io" # the base hostname & protocol for your site
+twitter_username: mestre_bira
+github_username:  Bira
+paginate: 5
 
 # Build settings
 markdown: kramdown
