--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ url: "https://Bira.github.io" # the base hostname & protocol for your site
 twitter_username: mestre_bira
 github_username:  Bira
 paginate: 5
-
+disqus:
+  shortname: 'octopus-carnival'
 # Build settings
 markdown: kramdown
 theme: minima
