--- a/.github/workflows/jekyll-github-pages.yml
+++ b/.github/workflows/jekyll-github-pages.yml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   jekyll:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04
     steps:
       - name: folder setup
         uses: actions/checkout@v2
@@ -26,4 +26,5 @@ jobs:
         uses: peaceiris/actions-gh-pages@v3
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
+
           publish_dir: ./_site
