--- a/.github/workflows/jekyll-github-pages.yml
+++ b/.github/workflows/jekyll-github-pages.yml
@@ -13,9 +13,9 @@ jobs:
         uses: actions/checkout@v4
 
       - name: setup ruby
-        uses: actions/setup-ruby@v1
+        uses: ruby/setup-ruby@v1.175.1
         with:
-          ruby-version: 3.3.1
+          ruby-version: 3.3
 
       - name: install dependencies & build site
         uses: limjh16/jekyll-action-ts@v2
